tests/functional/cli-characterisation/nix-env-qa-json-meta.err
error:
       … while querying the derivation named 'infinite-meta-1.0'

       error: stack overflow; max-call-depth exceeded
       at /pwd/cli-characterisation/infinite-meta.nix:3:7:
            2| let
            3|   x = { inherit x; };
             |       ^
            4| in
